--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -1,4 +1,7 @@
-<%= form_with(model: property, class: "contents") do |form| %>
+<%= form_with(model: property, class: "contents", data: {
+  controller: 'nested-form',
+  nested_form_wrapper_selector_value: '.nested-form-wrapper'
+}) do |form| %>
   <% if property.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
       <h2><%= pluralize(property.errors.count, "error") %> prohibited this property from being saved:</h2>
@@ -23,8 +26,10 @@
 
   <div class="my-5">
     <%= form.label :state %>
-    <%= form.text_field :state, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.select :state, options_for_select(US_STATES), { prompt: "State" } %>
   </div>
+
+  <%= render "unit_nested_form", form: form %>
 
   <div class="inline">
     <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
