--- a/app/views/properties/_unit_fields.html.erb
+++ b/app/views/properties/_unit_fields.html.erb
@@ -1,19 +1,28 @@
 <div class="nested-form-wrapper" data-new-record="<%= form.object.new_record? %>">
-    <%= form.label :bedroom_count %>
-    <%= form.number_field :bathroom_count, min: 0, step: 1 %>
-
-    <%= form.label :bathroom_count %>
-    <%= form.number_field :bathroom_count, min: 0, step: 1 %>
-
-    <%= form.label :square_footage %>
-    <%= form.number_field :square_footage, min: 0, step: 1 %>
-
-    <%= form.label :rent_price %>
-    <%= form.number_field :rent_price, min: 0, step: 0.01 %>
+    <div class="my-5">
+        <%= form.label :bedroom_count, "Bedrooms" %>
+        <%= form.number_field :bedroom_count, min: 0, step: 1, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2" %>
+    </div>
+    
+    <div class="my-5">
+        <%= form.label :bathroom_count, "Bathrooms" %>
+        <%= form.number_field :bathroom_count, min: 0, step: 1, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2" %>
+    </div>
+    
+    <div class="my-5">
+        <%= form.label :square_footage, "Square Footage" %>
+        <%= form.number_field :square_footage, min: 0, step: 1, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2" %>
+    </div>
+    
+    <div class="my-5">
+        <%= form.label :rent_price, "Monthly Rent ($USD)" %>
+        <%= form.number_field :rent_price, min: 0, step: 0.1, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2" %>
+    </div>
 
     <div>
-        <%= button_tag type: "button", data: { action: "nested-form#remove" } do %>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+        <%= button_tag type: "button", data: { action: "nested-form#remove" }, class: "my-2 flex items-center px-4 py-2 border border-rose-500 text-rose-500 rounded-md hover:bg-rose-100 transition-colors" do %>
+            Remove this Unit
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="mx-0 bi bi-x" viewBox="0 0 16 16">
                 <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
             </svg>
         <% end %>
