--- a/app/views/properties/_unit_nested_form.html.erb
+++ b/app/views/properties/_unit_nested_form.html.erb
@@ -5,7 +5,6 @@
 </template>
 
 <div class="my-5">
-    <%= form.label :units %>
     <div>
         <%= form.fields_for :units do |unit_fields| %>
             <%= render "unit_fields", form: unit_fields %>
@@ -15,6 +14,5 @@
     </div>
     <button type="button" 
             data-action="nested-form#add"
-            class="btn">Add Unit
-    </button>
+            class="my-5 rounded-lg py-3 px-5 bg-slate-400 inline-block font-medium">Add a unit
 </div>
