--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -5,17 +5,18 @@
 
   <% content_for :title, "Properties" %>
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Properties</h1>
-    <%= link_to "New property", new_property_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+  <div class="mb-5">
+    <%= render "shared/properties_search_bar" %>
   </div>
 
-  <div id="properties" class="min-w-full">
+  <div class="my-5 flex justify-between items-center">
+    <h1 class="font-bold text-4xl">Properties</h1>
+    <%= render "shared/add_a_new_property_button" %>
+  </div>
+
+  <div id="properties" class="min-w-full grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 p-4">
     <% @properties.each do |property| %>
-      <%= render property %>
-      <p>
-        <%= link_to "Show this property", property, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-      </p>
+      <%= render "properties/property_thumbnail", property: property %>
     <% end %>
   </div>
 </div>
