--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= render "layouts/sitewide_header" %>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="container mx-auto my-16 px-5 flex">
       <%= yield %>
     </main>
   </body>
